<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tilawah+</string>

    <!-- Home Screen -->
    <string name="skip">Skip</string>
    <string name="feeling_lucky">I\'m Feeling Lucky</string>

    <!-- Surah List -->
    <string name="surahs_list">Surahs</string>
    <string name="ayah_count">%d verses</string>

    <!-- Surah Detail -->
    <string name="surah_info">%1$s • %2$d verses • %3$s</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="language">Surah Name</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_small">S</string>
    <string name="font_size_medium">M</string>
    <string name="font_size_large">L</string>
    <string name="font_size_extra_large">XL</string>
    <string name="tajweed_highlighting">Tajweed Highlighting</string>
    <string name="tajweed_on">On</string>
    <string name="tajweed_off">Off</string>
    <string name="version">Version</string>
    <string name="version_format">Version %s</string>

    <!-- Surah List Headers -->
    <string name="header_surah_name">Surah</string>
    <string name="header_surah_name_ar">السورة</string>
    <string name="header_ayah_count">Verses</string>
    <string name="header_ayah_count_ar">آیاتها</string>
    <string name="header_surah_number">No.</string>
    <string name="header_surah_number_ar">رقمها</string>
    <string name="header_revelation_type">Type</string>
    <string name="header_revelation_type_ar">البیان</string>
    <string name="meccan_ar">مكية</string>
    <string name="medinan_ar">مدنية</string>

    <!-- Comments -->
    <string name="add_comment">Add Comment</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="enter_your_comment">Enter your comment...</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No comments yet.\nTap the comment icon on any Ayah to add one.</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="comment_saved">Comment saved</string>

    <!-- Share -->
    <string name="share_ayah">Share Ayah</string>

    <!-- Image Creation -->
    <string name="create_image">Create Image</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save_and_share">Save &amp; Share</string>
    <string name="generating_image">Generating image...</string>
    <string name="image_saved">Image saved to gallery</string>
    <string name="image_save_failed">Failed to save image</string>
    <string name="drag_to_position">Drag • Pinch to resize • Two fingers to rotate</string>
    <string name="camera_permission_required">Camera permission is required to take photos</string>
    <string name="storage_permission_required">Storage permission is required to access photos</string>
</resources>
